@@ -6,12 +6,12 @@ import java.util.List;
 
 public class Echeancier extends Global {
 
-    private ArrayList<Evenement> listeEvenements;
+    private LinkedList<Evenement> listeEvenements;
     /* Comme toute les collections, il ne faut pas l'exporter.
      */
 
     public Echeancier() {
-        listeEvenements = new ArrayList<>(100);
+        listeEvenements = new LinkedList<>();
     }
 
     public boolean estVide() {
@@ -32,8 +32,8 @@ public class Echeancier extends Global {
     }
 
     public Evenement retourneEtEnlevePremier() {
-        Evenement e = listeEvenements.get(0);
-        listeEvenements.remove(0);
+        Evenement e = listeEvenements.getFirst();
+        listeEvenements.removeFirst();
         return e;
     }
 
